--- a/about.html
+++ b/about.html
@@ -30,142 +30,122 @@
 </head>
 
 <body>
+<div class="myApp about">
 
-    <!--     <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Brand Logo</a>
-    </div>
-
-    Collect the nav links, forms, and other content for toggling
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="pull-left"><a href="#">Dashboard</a></li>
-        <li class="active"><a href="#">Stories</a></li>
-        <li><a href="#">Videos</a></li>
-        <li><a href="#">Photos</a></li>
-        <li class="social pull-right"><a href="#">Social Links</a></li>
+    <div class="container-fluid">
+  <nav class="navbar navbar-fixed-bottom" role="navigation">
+    <div class="">
+      <ul class="nav navbar-nav navbar-custom">
+        <div class="clearfix">
+          <li id="home" class="visible-xs">
+            <h1 class="band-name"><a href="index.html"><strong>Ever</strong>deen</a></h1>
+          </li>
+        </div>
+        <li id="home">
+          <a class="hidden-xs" href="index.html">Home</strong><i class="fa fa-home"></i>&nbsp;&nbsp;&nbsp;</a>
+        </li>
+        <li id="about">
+          <a href="about.html">About <i class="fa fa-list-alt"></i></a> 
+        </li>
+        <li id="music">
+          <a href="music.html">Hear <i class="fa fa-music"></i></a>               
+        </li>
+        <li id="shows">
+          <a href="shows.html">See <i class="fa fa-camera-retro"></i></a>               
+        </li>
+        <li id="support">
+          <a href="support.html">Support <i class="fa fa-heart-o"></i></span></a>
+        </li>
+        <li id="contact">
+          <a href="contact.html">Contact <i class="fa fa-envelope-o"></i></a>
+        </li>
       </ul>
-    </div>
-  </div>
-</nav>
- -->
-  <div class="container-fluid">
-    <nav class="navbar navbar-fixed-bottom" role="navigation">
-
-        <div class="">
-          <ul class="nav navbar-nav navbar-custom">
-                    <li id="home" class="visible-xs">
-                      <h1 class="band-name"><a href="index.html"><strong>Ever</strong>deen</a></h1>
-                    </li>
-                    <li id="about">
-                      <a href="about.html">About <i class="fa fa-list-alt"></i></a> 
-                    </li>
-                    <li id="music">
-                      <a href="music.html">Hear <i class="fa fa-music"></i></a>               
-                    </li>
-                    <li id="shows">
-                      <a href="shows.html">See <i class="fa fa-camera-retro"></i></a>               
-                    </li>
-                    <li id="support">
-                        <a href="support.html">Support <i class="fa fa-heart-o"></i></span></a>
-                    </li>
-                    <li id="contact">
-                        <a href="contact.html">Contact <i class="fa fa-envelope-o"></i></a>
-                    </li>
-                </ul>
-          </div><!-- /.navbar-collapse -->
-    </nav>
-  </div><!-- /.container -->
-
-
-    <!-- Page Content -->
-    <div class="container">
-
-        <!-- Introduction Row -->
-        <div class="row">
-            <div class="xs-col-12 sm-col-6 xs-col-pull-3">
-        <div class="row">
-	<div class="social col-xs-12 col-xs-offset-0 col-sm-2 col-sm-offset-10">
-		<a href="https://twitter.com/everdeentheband" target="_blank">
-			<span class="fa-stack fa-lg">
-			  <i class="fa fa-square-o fa-stack-2x"></i>
-			  <i class="fa fa-twitter fa-stack-1x"></i>
-			</span>
-		</a>
-		<a href="https://soundcloud.com/everdeenmusic" target="_blank">
-			<span class="fa-stack fa-lg">
-			  <i class="fa fa-square-o fa-stack-2x"></i>
-			  <i class="fa fa-soundcloud fa-stack-1x"></i>
-			</span>
-		</a>
-		<a href="https://www.facebook.com/everdeenmusic" target="_blank">
-			<span class="fa-stack fa-lg">
-			  <i class="fa fa-square-o fa-stack-2x"></i>
-			  <i class="fa fa-facebook fa-stack-1x"></i>
-			</span>
-		</a>
-		<a href="https://www.youtube.com/watch?v=JTCtzpQs08c&feature=youtu.be" target="_blank">
-			<span class="fa-stack fa-lg">
-			  <i class="fa fa-square-o fa-stack-2x"></i>
-			  <i class="fa fa-youtube fa-stack-1x"></i>
-			</span>
-		</a>
-		<a href="https://everdeenmusic.bandcamp.com/releases" target="_blank">
-			<span class="fa-stack fa-lg">
-			  <i class="fa fa-square-o fa-stack-2x"></i>
-			  <i class="fa fa-headphones fa-stack-1x"></i>
-			</span>
-		</a>
-		<a href="live.html#gallery" target="_blank">
-			<span class="fa-stack fa-lg">
-			  <i class="fa fa-square-o fa-stack-2x"></i>
-			  <i class="fa fa-camera-retro fa-stack-1x"></i>
-			</span>
-		</a>
+    </div><!-- /.navbar-collapse -->
+  </nav>
+</div><!-- /.container -->
+    	<div class="row">
+		<div class="social col-xs-12 col-xs-offset-0 col-sm-2 col-xs-offset-10">
+			<a href="https://twitter.com/everdeentheband" target="_blank">
+				<span class="fa-stack fa-lg">
+				  <i class="fa fa-square-o fa-stack-2x"></i>
+				  <i class="fa fa-twitter fa-stack-1x"></i>
+				</span>
+			</a>
+			<a href="https://soundcloud.com/everdeenmusic" target="_blank">
+				<span class="fa-stack fa-lg">
+				  <i class="fa fa-square-o fa-stack-2x"></i>
+				  <i class="fa fa-soundcloud fa-stack-1x"></i>
+				</span>
+			</a>
+			<a href="https://www.facebook.com/everdeenmusic" target="_blank">
+				<span class="fa-stack fa-lg">
+				  <i class="fa fa-square-o fa-stack-2x"></i>
+				  <i class="fa fa-facebook fa-stack-1x"></i>
+				</span>
+			</a>
+			<a href="https://www.youtube.com/watch?v=JTCtzpQs08c&feature=youtu.be" target="_blank">
+				<span class="fa-stack fa-lg">
+				  <i class="fa fa-square-o fa-stack-2x"></i>
+				  <i class="fa fa-youtube fa-stack-1x"></i>
+				</span>
+			</a>
+			<a href="https://everdeenmusic.bandcamp.com/releases" target="_blank">
+				<span class="fa-stack fa-lg">
+				  <i class="fa fa-square-o fa-stack-2x"></i>
+				  <i class="fa fa-headphones fa-stack-1x"></i>
+				</span>
+			</a>
+			<a href="live.html#gallery" target="_blank">
+				<span class="fa-stack fa-lg">
+				  <i class="fa fa-square-o fa-stack-2x"></i>
+				  <i class="fa fa-camera-retro fa-stack-1x"></i>
+				</span>
+			</a>
+		</div>
 	</div>
-</div>            </div>
-            <div class="xs-col-12 sm-col-6">
-                <h1 id="bio" class="inline">Everdeen
-                    <small>Bio</small>
-                </h1>
+            <div class="row page-topper">
+            <div class="col-sm-6 hidden-xs">
+                <h1 class="band-name"><a href="index.html"><strong>Ever</strong>deen</a></h1>
             </div>
         </div>
-        <div class="row">
 
-            <div class="col-xs-offset-1 col-xs-10 col-md-offset-0 col-md-7 ">
-                <p><b>EVERDEEN</b> is an indie/folk/rock band from Stuttgart, Germany and San Francisco. Comparable to artists such as Yeah Yeah Yeahs, Coldplay, Angus &amp; Julia Stone, the band has recently released their album, <b>PERFECT LINES</b>, produced by <b>BENNO RICHTER</b>. The ten-song album is underpinned by the ethereal and emotional voice of singer <b>SÜMEYRA</b>, accompanied by the manifold guitar textures of <b>IAN STAHL</b>. Everdeen's sound on Perfect Lines is marked by dynamics, and ranges from delicate, sylvan folk of "Don't Look Behind" to the racous indie-rock dissonance of "In A Whisper."</p>
 
-                <p>In 2011 singer/guitarist Sümeyra met guitarist/multi-instrumentalist Ian while studying music in San Francisco. From the beginning it was clear that they had a creative connection and immediately started writing original material together.</p>
+    <section id="bio">
+         <div class="container">        
+    <h2>Bio</h2>
+    <div class="row">
 
-                <p>Prior to Everdeen, singer Sümeyra had already established a career as a solo artist, which included the release of an album entitled <b>“THOUGHTS”</b> and a tour throughout southern Germany in 2010. The beginning of her collaboration with Ian coincided with her discovery of an array of new influences which would shape Everdeen's nascent sound.</p>
+        <div class="col-xs-offset-1 col-xs-10 col-md-offset-0 col-md-7 ">
+            <p><b>EVERDEEN</b> is an indie/folk/rock band from Stuttgart, Germany and San Francisco. Comparable to artists such as Yeah Yeah Yeahs, Coldplay, Angus &amp; Julia Stone, the band has recently released their album, <b>PERFECT LINES</b>, produced by <b>BENNO RICHTER</b>. The ten-song album is underpinned by the ethereal and emotional voice of singer <b>SÜMEYRA</b>, accompanied by the manifold guitar textures of <b>IAN STAHL</b>. Everdeen's sound on Perfect Lines is marked by dynamics, and ranges from delicate, sylvan folk of "Don't Look Behind" to the racous indie-rock dissonance of "In A Whisper."</p>
 
-                <p>After relocating to Stuttgart, Germany in early 2014 Everdeen began writing and recording what would become their first full-length album "Perfect Lines". Armed with both classic and cutting-edge influences the group is currently performing shows in the Stuttgart area, accompanied on stage by drummer <b>JOHN WILLIAMSON</b>, bassist <b>RUSSELL SNYDER</b>, and cellist <b>HALINA WILLIAMS</b>.<p>
-            </div>
+            <p>In 2011 singer/guitarist Sümeyra met guitarist/multi-instrumentalist Ian while studying music in San Francisco. From the beginning it was clear that they had a creative connection and immediately started writing original material together.</p>
 
-            <div class="col-xs-12 col-xs-offset-0 col-md-5 vcenter">
-                <img src="img/live2.jpg" class="img-responsive ">
-            </div>
-        </div><!-- end row -->
-    </div>
-    <div class="container">
+            <p>Prior to Everdeen, singer Sümeyra had already established a career as a solo artist, which included the release of an album entitled <b>“THOUGHTS”</b> and a tour throughout southern Germany in 2010. The beginning of her collaboration with Ian coincided with her discovery of an array of new influences which would shape Everdeen's nascent sound.</p>
+
+            <p>After relocating to Stuttgart, Germany in early 2014 Everdeen began writing and recording what would become their first full-length album "Perfect Lines". Armed with both classic and cutting-edge influences the group is currently performing shows in the Stuttgart area, accompanied on stage by drummer <b>JOHN WILLIAMSON</b>, bassist <b>RUSSELL SNYDER</b>, and cellist <b>HALINA WILLIAMS</b>.</p>
+        </div>
+
+        <div class="hidden-sm hidden-xs col-md-4">
+            <img src="img/live2.jpg" class="img-responsive">
+        </div>
+    </div><!-- end row -->
+</div>
+    </section>
+    <section id="band">
+             <div class="container">
         <!-- Team Members Row -->
         <div class="row">
             <h2 id="band">The Band</h2>
             <div class="col-xs-12 col-sm-6 text-center">
-                <img class="img-circle img-responsive center-block" src="http://placehold.it/200x200" alt="Sümeyra's in a cool pose">
-                <h3>Sümeyra 
+                <img class="img-circle img-responsive center-block" src="img/band/sumy.jpg" alt="Sümeyra's in a cool pose">
+                <h3>Sümeyra <br>
                     <small>Singer, Guitar, Keys</small>
                 </h3>
                 <p>Prior to Everdeen, singer Sümeyra had already established a career as a solo artist, which included the release of an album entitled “THOUGHTS” and a tour throughout southern Germany in 2010</p>
             </div>
             <div class="col-xs-12 col-sm-6 text-center">
-                <img class="img-circle img-responsive center-block" src="http://placehold.it/200x200" alt="Ian in a cool pose">
-                <h3>Ian Stahl
+                <img class="img-circle img-responsive center-block" src="img/band/ian.jpg" alt="Ian in a cool pose">
+                <h3>Ian Stahl<br>
                     <small>Guitar, Keys</small>
                 </h3>
                 <p>Ian is really cool and wants you to know this about himself.  Its really important that you know this thing also.  Also this.  And this.  Awesome!</p>
@@ -173,37 +153,36 @@
         </div>
         <div class="row">
             <div class="col-xs-12 col-sm-4 text-center">
-                <img class="img-circle img-responsive center-block" src="http://placehold.it/200x200" alt="John in a cool pose">
-                <h3>John Williamson 
+                <img class="img-circle img-responsive center-block" src="img/band/john.jpg" alt="John in a cool pose">
+                <h3>John Williamson <br>
                     <small>Drums, Cymbals</small>
                 </h3>
                 <p>John is really cool and wants you to know this about himself.  Its really important that you know this thing also.  Also this.  And this.  Awesome!</p>
             </div>
             <div class="col-xs-12 col-sm-4 text-center">
-                <img class="img-circle img-responsive center-block" src="http://placehold.it/200x200" alt="Russell in a cool pose">
-                <h3>Russell Snyder 
+                <img class="img-circle img-responsive center-block" src="img/band/russell.jpg" alt="Russell in a cool pose">
+                <h3>Russell Snyder <br>
                     <small>Bass</small>
                 </h3>
                 <p>Russell plays the bass.  He also does <a href="http//:russellsnyder.io" target="_blank">webdesign</a>.  Boom.</p>
             </div>
             <div class="col-xs-12 col-sm-4 text-center">
-                <img class="img-circle img-responsive center-block" src="http://placehold.it/200x200" alt="Halina">
-                <h3>Halina Stevens
+                <img class="img-circle img-responsive center-block" src="img/band/halina.jpg" alt="Halina">
+                <h3>Halina Stevens<br>
                     <small>Cello</small>
                 </h3>
                 <p>Helina is just great.  Really gifted musician and jazz singer.  She's just tops.  Follow her on her new website coming soon!</p>
             </div>
         </div>
-    </div><!-- end of container-->
- 
-        <!-- Introduction Row -->
-    <div class="container">
-        <div class="row">
-                <h1 id="epk">EPK
-                    <small>Book us today!</small>
-                </h1>
+    </div><!-- end of container-->    </section>
+    <section id="epk">
+             <div class="container">
+	<h2 id="epk">EPK</h2>
+        <div class="col-xs-12">
                 <p>Coming soon!</p>
         </div>
+    </div><!-- /.container -->
+    </section>
 
         <!-- Footer -->
                 <footer>
@@ -221,8 +200,6 @@
 
         </footer>
 
-    </div>
-    <!-- /.container -->
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
@@ -230,6 +207,7 @@
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
 
+</div>
 </body>
 
 </html>
