--- a/contact.html
+++ b/contact.html
@@ -30,97 +30,80 @@
 </head>
 
 <body>
+<div class="myApp contact">
 
-    <div class="row">
-	<div class="social col-xs-12 col-xs-offset-0 col-sm-2 col-sm-offset-10">
-		<a href="https://twitter.com/everdeentheband" target="_blank">
-			<span class="fa-stack fa-lg">
-			  <i class="fa fa-square-o fa-stack-2x"></i>
-			  <i class="fa fa-twitter fa-stack-1x"></i>
-			</span>
-		</a>
-		<a href="https://soundcloud.com/everdeenmusic" target="_blank">
-			<span class="fa-stack fa-lg">
-			  <i class="fa fa-square-o fa-stack-2x"></i>
-			  <i class="fa fa-soundcloud fa-stack-1x"></i>
-			</span>
-		</a>
-		<a href="https://www.facebook.com/everdeenmusic" target="_blank">
-			<span class="fa-stack fa-lg">
-			  <i class="fa fa-square-o fa-stack-2x"></i>
-			  <i class="fa fa-facebook fa-stack-1x"></i>
-			</span>
-		</a>
-		<a href="https://www.youtube.com/watch?v=JTCtzpQs08c&feature=youtu.be" target="_blank">
-			<span class="fa-stack fa-lg">
-			  <i class="fa fa-square-o fa-stack-2x"></i>
-			  <i class="fa fa-youtube fa-stack-1x"></i>
-			</span>
-		</a>
-		<a href="https://everdeenmusic.bandcamp.com/releases" target="_blank">
-			<span class="fa-stack fa-lg">
-			  <i class="fa fa-square-o fa-stack-2x"></i>
-			  <i class="fa fa-headphones fa-stack-1x"></i>
-			</span>
-		</a>
-		<a href="live.html#gallery" target="_blank">
-			<span class="fa-stack fa-lg">
-			  <i class="fa fa-square-o fa-stack-2x"></i>
-			  <i class="fa fa-camera-retro fa-stack-1x"></i>
-			</span>
-		</a>
+    	<div class="row">
+		<div class="social col-xs-12 col-xs-offset-0 col-sm-2 col-xs-offset-10">
+			<a href="https://twitter.com/everdeentheband" target="_blank">
+				<span class="fa-stack fa-lg">
+				  <i class="fa fa-square-o fa-stack-2x"></i>
+				  <i class="fa fa-twitter fa-stack-1x"></i>
+				</span>
+			</a>
+			<a href="https://soundcloud.com/everdeenmusic" target="_blank">
+				<span class="fa-stack fa-lg">
+				  <i class="fa fa-square-o fa-stack-2x"></i>
+				  <i class="fa fa-soundcloud fa-stack-1x"></i>
+				</span>
+			</a>
+			<a href="https://www.facebook.com/everdeenmusic" target="_blank">
+				<span class="fa-stack fa-lg">
+				  <i class="fa fa-square-o fa-stack-2x"></i>
+				  <i class="fa fa-facebook fa-stack-1x"></i>
+				</span>
+			</a>
+			<a href="https://www.youtube.com/watch?v=JTCtzpQs08c&feature=youtu.be" target="_blank">
+				<span class="fa-stack fa-lg">
+				  <i class="fa fa-square-o fa-stack-2x"></i>
+				  <i class="fa fa-youtube fa-stack-1x"></i>
+				</span>
+			</a>
+			<a href="https://everdeenmusic.bandcamp.com/releases" target="_blank">
+				<span class="fa-stack fa-lg">
+				  <i class="fa fa-square-o fa-stack-2x"></i>
+				  <i class="fa fa-headphones fa-stack-1x"></i>
+				</span>
+			</a>
+			<a href="live.html#gallery" target="_blank">
+				<span class="fa-stack fa-lg">
+				  <i class="fa fa-square-o fa-stack-2x"></i>
+				  <i class="fa fa-camera-retro fa-stack-1x"></i>
+				</span>
+			</a>
+		</div>
 	</div>
-</div>
-    <!--     <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Brand Logo</a>
-    </div>
 
-    Collect the nav links, forms, and other content for toggling
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="pull-left"><a href="#">Dashboard</a></li>
-        <li class="active"><a href="#">Stories</a></li>
-        <li><a href="#">Videos</a></li>
-        <li><a href="#">Photos</a></li>
-        <li class="social pull-right"><a href="#">Social Links</a></li>
+    <div class="container-fluid">
+  <nav class="navbar navbar-fixed-bottom" role="navigation">
+    <div class="">
+      <ul class="nav navbar-nav navbar-custom">
+        <div class="clearfix">
+          <li id="home" class="visible-xs">
+            <h1 class="band-name"><a href="index.html"><strong>Ever</strong>deen</a></h1>
+          </li>
+        </div>
+        <li id="home">
+          <a class="hidden-xs" href="index.html">Home</strong><i class="fa fa-home"></i>&nbsp;&nbsp;&nbsp;</a>
+        </li>
+        <li id="about">
+          <a href="about.html">About <i class="fa fa-list-alt"></i></a> 
+        </li>
+        <li id="music">
+          <a href="music.html">Hear <i class="fa fa-music"></i></a>               
+        </li>
+        <li id="shows">
+          <a href="shows.html">See <i class="fa fa-camera-retro"></i></a>               
+        </li>
+        <li id="support">
+          <a href="support.html">Support <i class="fa fa-heart-o"></i></span></a>
+        </li>
+        <li id="contact">
+          <a href="contact.html">Contact <i class="fa fa-envelope-o"></i></a>
+        </li>
       </ul>
-    </div>
-  </div>
-</nav>
- -->
-  <div class="container-fluid">
-    <nav class="navbar navbar-fixed-bottom" role="navigation">
-
-        <div class="">
-          <ul class="nav navbar-nav navbar-custom">
-                    <li id="home" class="visible-xs">
-                      <h1 class="band-name"><a href="index.html"><strong>Ever</strong>deen</a></h1>
-                    </li>
-                    <li id="about">
-                      <a href="about.html">About <i class="fa fa-list-alt"></i></a> 
-                    </li>
-                    <li id="music">
-                      <a href="music.html">Hear <i class="fa fa-music"></i></a>               
-                    </li>
-                    <li id="shows">
-                      <a href="shows.html">See <i class="fa fa-camera-retro"></i></a>               
-                    </li>
-                    <li id="support">
-                        <a href="support.html">Support <i class="fa fa-heart-o"></i></span></a>
-                    </li>
-                    <li id="contact">
-                        <a href="contact.html">Contact <i class="fa fa-envelope-o"></i></a>
-                    </li>
-                </ul>
-          </div><!-- /.navbar-collapse -->
-    </nav>
-  </div><!-- /.container -->
+    </div><!-- /.navbar-collapse -->
+  </nav>
+</div><!-- /.container -->
 
 
     <!-- Page Content -->
@@ -214,6 +197,7 @@
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
 
+</div>
 </body>
 
 </html>
